# SomeMathTask

./: .gitignore  CMakeLists.txt  conanfile.txt  debug.bat  main.cpp
